mPDF Writer for Commerce 1.1.1-pl
----------------------------------
Released on 2020-03-24

- Provide mPDF with a consistent base path (root of the MODX installation) to ensure relative image urls resolve consistently [S22301]

mPDF Writer for Commerce 1.1.0-pl
----------------------------------
Released on 12 August, 2019

- Remove unused mPDF fonts during package build to greatly reduce package size. To add new fonts, see: https://docs.modmore.com/en/Commerce/v1/Modules/mPDFWriter.html

mPDF Writer for Commerce 1.0.1-pl
----------------------------------
Released on 28 July, 2019

- Fix module not being recognised after installation

mPDF Writer for Commerce 1.0.0-pl
----------------------------------
Released on 25 July, 2019

- First release of the mPDF Writer for Commerce. Developed by Murray Wood for modmore.