@@ -82,8 +82,6 @@ switch($options[xPDOTransport::PACKAGE_ACTION]) {
 
         if (!checkVersion('PHP', PHP_VERSION, [
             '2019-07-01 12:00:00' => '7.1',
-            '2020-03-01 12:00:00' => '7.2',
-            '2020-11-30 12:00:00' => '7.3',
         ], $modx)) {
             $success = false;
         }
@@ -109,9 +107,17 @@ switch($options[xPDOTransport::PACKAGE_ACTION]) {
 
         if ($success) {
             $modx->log(xPDO::LOG_LEVEL_INFO, 'Requirements look good! Visit Extras > Commerce > Configuration > Commerce after installation to enable the module.');
+
+            // Check for EOL PHP versions
+            $modx->log(xPDO::LOG_LEVEL_INFO, 'Checking (optional) recommended versions...');
+            checkVersion('PHP', PHP_VERSION, [
+                '2019-12-01 12:00:00' => '7.2',
+                '2020-11-30 12:00:00' => '7.3',
+                '2021-12-06 12:00:00' => '7.4',
+            ], $modx);
         }
         else {
-            $modx->log(xPDO::LOG_LEVEL_ERROR, 'Unfortunately not all requirements have been met. Please correct the missing requirements, listed above, and run the install again.');
+            $modx->log(xPDO::LOG_LEVEL_ERROR, 'Your server or MODX installation does not meet the minimum requirements for this extra. Installation cannot continue.');
         }
 
         break;
